<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.passwordgenerator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForThread_TextView"
        android:id="@+id/ForThread_TextView" />

    <TextView
        android:text="@string/ThraedPassword_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForThread_TextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:id="@+id/ThreadPassword_TextView" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ThreadPassword_TextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/Thread_SeekBar" />

    <TextView
        android:text="@string/ThreadLength_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Thread_SeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:id="@+id/ThreadLength_TextView" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ThreadLength_TextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/ThreadLength_SeekBar" />

    <TextView
        android:text="@string/ThreadCount_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Thread_SeekBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/ThreadCount_TexView" />

    <TextView
        android:text="@string/ThreadLengthDisplay_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ThreadLength_TextView"
        android:layout_toLeftOf="@+id/ThreadCount_TexView"
        android:layout_toStartOf="@+id/ThreadCount_TexView"
        android:id="@+id/ThreadLengthDisplay_TextView" />

    <TextView
        android:text="@string/ForAsync_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ThreadLength_SeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:id="@+id/ForAsync_TextView" />

    <TextView
        android:text="@string/AsyncPasword_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForAsync_TextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/AsyncPassword_TextView" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AsyncPassword_TextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/AsyncPassword_SeekBar" />

    <TextView
        android:text="@string/AsyncLength_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AsyncPassword_SeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/AsyncLength_TextView" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AsyncLength_TextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:id="@+id/AsyncLength_SeekBar" />

    <TextView
        android:text="@string/AsyncCount_SeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/AsyncPassword_TextView"
        android:layout_toLeftOf="@+id/ThreadLengthDisplay_TextView"
        android:layout_toStartOf="@+id/ThreadLengthDisplay_TextView"
        android:id="@+id/AsyncCount_SeekBar" />

    <TextView
        android:text="@string/AsyncLengthDisplay_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/AsyncLength_TextView"
        android:layout_toLeftOf="@+id/AsyncCount_SeekBar"
        android:layout_toStartOf="@+id/AsyncCount_SeekBar"
        android:id="@+id/AsyncLengthDisplay_TextView" />

    <Button
        android:text="@string/GenerateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AsyncLength_SeekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:id="@+id/GenerateButton" />
</RelativeLayout>
