<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_generated_passwords"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.passwordgenerator.GeneratedPasswords">

    <TextView
        android:text="@string/T_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:id="@+id/T_TextView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/T_TextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/T_ScrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ln1" />

    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/A_TextView"
        android:layout_marginTop="10dp"
        android:id="@+id/A_ScrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ln2" />

    </ScrollView>

    <TextView
        android:text="@string/A_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/A_TextView"
        android:layout_below="@+id/T_ScrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <Button
        android:text="@string/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:id="@+id/finishButton" />


</RelativeLayout>
